using System;

namespace CODE_GameLib.Models
{
    public interface IRenderable
    {
        public ConsoleColor Color { get; }
    }
}